fixes for multiple ids on same page, <br/> tags, and oversize or undersize containers

--- a/Neff/Other/68830_EU_04_05.html
+++ b/Neff/Other/68830_EU_04_05.html
@@ -154,7 +154,7 @@
                                     "bricType": "SvgContainer",
                                     "config":
                                         {
-                                            "maxSize": { "height": 580, "width": 457 },
+                                            "maxSize": { "height": 560, "width": 457 }
                                         },
                                     "configFixup":
                                         [
