--- a/Neff/Other/68830_EU_08_03a.html
+++ b/Neff/Other/68830_EU_08_03a.html
@@ -75,7 +75,7 @@
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Increasing home size<br><br>" }
+                                                                                "value": { "type": "constant", "value": "Increasing home size<br/><br/>" }
                                                                             }
                                                                         ]
                                                                 },
