--- a/Neff/Other/68830_HP_02_01.html
+++ b/Neff/Other/68830_HP_02_01.html
@@ -44,7 +44,7 @@
                                     "config":
                                         {
                                             "id": "lblCrsl1",
-                                            "imagesActualSize": { "height": 401, "width": 477 }
+                                            "imagesActualSize": { "height": 401, "width": 476 }
                                         },
                                     "configFixup":
                                         [
@@ -133,7 +133,7 @@
                                     "bricType": "SvgContainer",
                                     "config":
                                         {
-                                            "maxSize": { "height": 425, "width": 477 },
+                                            "maxSize": { "height": 480, "width": 477 }
                                         },
                                     "configFixup":
                                         [
