--- a/Neff/Other/68830_HP_05_01.html
+++ b/Neff/Other/68830_HP_05_01.html
@@ -74,7 +74,7 @@
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Impact increases with the size of the population.<br><br><br><br>" }
+                                                                                "value": { "type": "constant", "value": "Impact increases with the size of the population.<br/><br/><br/><br/>" }
                                                                             }
                                                                         ]
                                                                 },
