--- a/Neff/Other/68830_RE_01_03b.html
+++ b/Neff/Other/68830_RE_01_03b.html
@@ -36,7 +36,7 @@
 									"bricType": "Image",
 									"config":
 										{
-											"id": "image1",
+											"id": "imagea",
                                             "caption": "Tidal energy generation facility (one design)",
                                             "actualSize": {"height": 390, "width": 457},
                                             "displayWidth": 457
