--- a/Neff/Other/68830_EU_08_04b.html
+++ b/Neff/Other/68830_EU_08_04b.html
@@ -43,7 +43,7 @@
                                     "bricType": "LabelCarousel",
                                     "config":
                                         {
-                                            "id": "lblCrsl1",
+                                            "id": "lblCrsl2",
                                             "imagesActualSize": { "height": 335, "width": 335 },
                                             "displayWidth": 335
                                         },
@@ -75,7 +75,7 @@
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Increased use of energy efficient technologies<br><br>" }
+                                                                                "value": { "type": "constant", "value": "Increased use of energy efficient technologies<br/><br/>" }
                                                                             }
                                                                         ]
                                                                 },
