change non-ascii ndash to &#x2013; entity because unicode import to PAF isn't working

--- a/Neff/Other/68830_HP_02_01.html
+++ b/Neff/Other/68830_HP_02_01.html
@@ -74,7 +74,7 @@
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Fast growth rate–increasing population" }
+                                                                                "value": { "type": "constant", "value": "Fast growth rate&#x2013;increasing population" }
                                                                             }
                                                                         ]
                                                                 },
@@ -96,7 +96,7 @@
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Negative growth rate-decreasing population" }
+                                                                                "value": { "type": "constant", "value": "Negative growth rate&#x2013;decreasing population" }
                                                                             }
                                                                         ]
                                                                 },
@@ -118,7 +118,7 @@
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Steady growth rate–stable population" }
+                                                                                "value": { "type": "constant", "value": "Steady growth rate&#x2013;stable population" }
                                                                             }
                                                                         ]
                                                                 }
