--- a/Neff/Other/68830_NE_01_01.html
+++ b/Neff/Other/68830_NE_01_01.html
@@ -75,7 +75,7 @@
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "359-299 million years ago: Ferns, trees, and other plants in ancient swamps fell and accumulated in deep layers of sediment.</br></br>Present day: These organic tissues were heated, compressed, and transformed, along with minerals, into a solid, dense material that is now mined as coal." }
+                                                                                "value": { "type": "constant", "value": "359-299 million years ago: Ferns, trees, and other plants in ancient swamps fell and accumulated in deep layers of sediment.<br /><br />Present day: These organic tissues were heated, compressed, and transformed, along with minerals, into a solid, dense material that is now mined as coal." }
                                                                             },
                                                                             { 
                                                                                 "name": "selectorLabel", 
@@ -101,7 +101,7 @@
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "359-299 million years ago: In ancient rivers and oceans, plankton and algae died and were buried in deep layers of sediments.</br></br>Present day: After being heated and compressed under sediments, plankton and algae have been transformed into oil or natural gas." }
+                                                                                "value": { "type": "constant", "value": "359-299 million years ago: In ancient rivers and oceans, plankton and algae died and were buried in deep layers of sediments.<br /><br />Present day: After being heated and compressed under sediments, plankton and algae have been transformed into oil or natural gas." }
                                                                             },
                                                                             { 
                                                                                 "name": "selectorLabel", 
