--- a/Neff/MC/68830_HP_C04.html
+++ b/Neff/MC/68830_HP_C04.html
@@ -89,7 +89,7 @@
                                                                                 "answer2":
                                                                                         {
                                                                                             "score": 0,
-                                                                                            "response": "Is the bottom level of the age pyramid—which shows people between the ages of 0 and 5—very large?"
+                                                                                            "response": "Is the bottom level of the age pyramid&#x2014;which shows people between the ages of 0 and 5&#x2014;very large?"
                                                                                         },
                                                                                 "answer3":
                                                                                         {
