--- a/Neff/MC/68830_HP_C05.html
+++ b/Neff/MC/68830_HP_C05.html
@@ -94,7 +94,7 @@
                                                                                 "answer3":
                                                                                         {
                                                                                             "score": 0,
-                                                                                            "response": "Is the bottom of the age pyramid—which shows people between the ages of 0 and 5—small or large?"
+                                                                                            "response": "Is the bottom of the age pyramid&#x2014;which shows people between the ages of 0 and 5&#x2014;small or large?"
                                                                                         },
                                                                                 "answer4":
                                                                                         {
