--- a/Neff/MC/68830_HP_C06.html
+++ b/Neff/MC/68830_HP_C06.html
@@ -99,7 +99,7 @@
                                                                                 "answer4":
                                                                                         {
                                                                                             "score": 0,
-                                                                                            "response": "If Japan’s trend of having a mostly older population continues, is Japan more likely to invest in things that benefit older or younger people?"
+                                                                                            "response": "If Japan&#x2019;s trend of having a mostly older population continues, is Japan more likely to invest in things that benefit older or younger people?"
                                                                                         },
 																				"answer5":
                                                                                         {
