--- a/Neff/MC/68830_HP_C07.html
+++ b/Neff/MC/68830_HP_C07.html
@@ -41,7 +41,7 @@
                                                                     "order": "randomized",
                                                                     "presenterType": "RadioGroup",
                                                                     "presenterConfig": {"numberFormat": ""},
-                                                                    "question": "If Country B’s economy expanded and the money was invested into health and sanitation infrastructure, what would happen to population growth rates according to the demographic transition model?",
+                                                                    "question": "If Country B&#x2019;s economy expanded and the money was invested into health and sanitation infrastructure, what would happen to population growth rates according to the demographic transition model?",
                                                                     "choices":
                                                                             [
                                                                                 {
@@ -57,7 +57,7 @@
                                                                                     "answerKey": "answer3"
                                                                                 },
                                                                                 {
-                                                                                    "content": "It’s impossible to tell from the information provided.",
+                                                                                    "content": "It&#x2019;s impossible to tell from the information provided.",
                                                                                     "answerKey": "answer4"
                                                                                 },
 
@@ -99,7 +99,7 @@
                                                                                 "answer4":
                                                                                         {
                                                                                             "score": 0,
-                                                                                            "response": "While we can’t predict exactly what will happen, what would be the most likely outcome based on the demographic transition model?"
+                                                                                            "response": "While we can&#x2019;t predict exactly what will happen, what would be the most likely outcome based on the demographic transition model?"
                                                                                         },
 																				"answer5":
                                                                                         {
