--- a/Neff/MC/68830_HP_C13.html
+++ b/Neff/MC/68830_HP_C13.html
@@ -49,7 +49,7 @@
                                                                                     "answerKey": "answer1"
                                                                                 },
                                                                                 {
-                                                                                    "content": "Wealth doesn’t matter much for the environment—it’s really the overall population that is most important.",
+                                                                                    "content": "Wealth doesn&#x2019;t matter much for the environment&#x2014;it&#x2019;s really the overall population that is most important.",
                                                                                     "answerKey": "answer2"
                                                                                 },
                                                                                 {
