--- a/Neff/MC/68830_HP_M06_02.html
+++ b/Neff/MC/68830_HP_M06_02.html
@@ -41,7 +41,7 @@
 											"order": "randomized",
 											"presenterType": "RadioGroup",
 											"presenterConfig": { "numberFormat": "" },
-											"question": "If population growth rates suddenly dropped to zero, what would happen to the world’s population over the next 50 years?",
+											"question": "If population growth rates suddenly dropped to zero, what would happen to the world&#x2019;s population over the next 50 years?",
 											"choices":
 												[
 													{
