--- a/Neff/MC/68830_HP_M06_03.html
+++ b/Neff/MC/68830_HP_M06_03.html
@@ -53,7 +53,7 @@
 														"answerKey": "answer2"
 													},
 													{
-														"content": "Children in the world’s developing nations",
+														"content": "Children in the world&#x2019;s developing nations",
 														"answerKey": "answer3"
 													},
 													{
