--- a/Neff/MC/68830_RE_C01.html
+++ b/Neff/MC/68830_RE_C01.html
@@ -41,7 +41,7 @@
                                                                     "order": "randomized",
                                                                     "presenterType": "RadioGroup",
                                                                     "presenterConfig": {"numberFormat": ""},
-                                                                    "question": "Which of the following combinations of energy could provide a 100% renewable energy mix?  Base demand refers to the demand that is always present for power (24 hours a day.  Peak demand refers to the period of the day when the most energy is used – usually in the afternoon when many people are at work.",
+                                                                    "question": "Which of the following combinations of energy could provide a 100% renewable energy mix?  Base demand refers to the demand that is always present for power (24 hours a day.  Peak demand refers to the period of the day when the most energy is used &#x2013; usually in the afternoon when many people are at work.",
                                                                     "choices":
                                                                             [
                                                                                 {
@@ -80,7 +80,7 @@
                                                                                 "answer1":
                                                                                         {
                                                                                             "score": 0,
-                                                                                            "response": "Can solar energy be used “during the day” in general?  What about cloudy days? Think about what specific time and type of demand solar would be best for."
+                                                                                            "response": "Can solar energy be used &#x201c;during the day&#x201d; in general?  What about cloudy days? Think about what specific time and type of demand solar would be best for."
                                                                                         },
                                                                                 "answer2":
                                                                                         {
