--- a/Neff/MC/68830_RE_C02.html
+++ b/Neff/MC/68830_RE_C02.html
@@ -41,11 +41,11 @@
                                                                     "order": "randomized",
                                                                     "presenterType": "RadioGroup",
                                                                     "presenterConfig": {"numberFormat": ""},
-                                                                    "question": "One day you are chatting with a friend about the environmental benefits of integrating large-scale renewable energy into the current power generation system.  Your friend is skeptical; he argues that wind farms kill birds, solar facilities interrupt animal migrations and habitats, and hydropower ruins river habitats—how could all of that possibly be environmentally friendly?  Which of the following arguments could you respond with that demonstrates some of the positive benefits you were thinking of and that might balance the points that your friend mentioned.",
+                                                                    "question": "One day you are chatting with a friend about the environmental benefits of integrating large-scale renewable energy into the current power generation system.  Your friend is skeptical; he argues that wind farms kill birds, solar facilities interrupt animal migrations and habitats, and hydropower ruins river habitats&#x2014;how could all of that possibly be environmentally friendly?  Which of the following arguments could you respond with that demonstrates some of the positive benefits you were thinking of and that might balance the points that your friend mentioned.",
                                                                     "choices":
                                                                             [
                                                                                 {
-                                                                                    "content": "Your friend is completely right—these large-scale renewable technologies do not provide any environmental benefits, so you don’t argue back..",
+                                                                                    "content": "Your friend is completely right&#x2014;these large-scale renewable technologies do not provide any environmental benefits, so you don&#x2019;t argue back..",
                                                                                     "answerKey": "answer1"
                                                                                 },
                                                                                 {
