--- a/Neff/MC/68830_RE_C03.html
+++ b/Neff/MC/68830_RE_C03.html
@@ -45,7 +45,7 @@
                                                                     "choices":
                                                                             [
                                                                                 {
-                                                                                    "content": "Solar PV doesn’t work in most locations.",
+                                                                                    "content": "Solar PV doesn&#x2019;t work in most locations.",
                                                                                     "answerKey": "answer1"
                                                                                 },
                                                                                 {
