--- a/Neff/MC/68830_RE_C04.html
+++ b/Neff/MC/68830_RE_C04.html
@@ -94,7 +94,7 @@
                                                                                 "answer4":
                                                                                         {
                                                                                             "score": 0,
-                                                                                            "response": "Think about the U.S. energy grid system. Do we currently have a way to efficiently store unused or “extra” energy??"
+                                                                                            "response": "Think about the U.S. energy grid system. Do we currently have a way to efficiently store unused or &#x201c;extra&#x201d; energy??"
                                                                                         }
                                                                             }
                                                                 }
