--- a/Neff/MC/68830_RE_M03_03.html
+++ b/Neff/MC/68830_RE_M03_03.html
@@ -41,7 +41,7 @@
 											"order": "randomized",
 											"presenterType": "RadioGroup",
 											"presenterConfig": { "numberFormat": "" },
-											"question": "Why can’t wind be used to provide all of the energy needed to meet electricity needs?",
+											"question": "Why can&#x2019;t wind be used to provide all of the energy needed to meet electricity needs?",
 											"choices":
 												[
 													{
