--- a/Neff/MC/68830_HP_C02.html
+++ b/Neff/MC/68830_HP_C02.html
@@ -62,7 +62,7 @@
                                                                                 },
 
 																				{
-                                                                                    "content": "We don’t know how global growth rates have changed.",
+                                                                                    "content": "We don&#x2019;t know how global growth rates have changed.",
                                                                                     "answerKey": "answer5"
                                                                                 }
 
@@ -104,7 +104,7 @@
 																				"answer5":
                                                                                         {
                                                                                             "score": 0,
-                                                                                            "response": "Don’t we already have the statistics needed to calculate this (that is, global population estimates over the past 50 years)?"
+                                                                                            "response": "Don&#x2019;t we already have the statistics needed to calculate this (that is, global population estimates over the past 50 years)?"
                                                                                         }
                                                                             }
                                                                 }
