--- a/Neff/MC/68830_HP_C12.html
+++ b/Neff/MC/68830_HP_C12.html
@@ -57,7 +57,7 @@
                                                                                     "answerKey": "answer3"
                                                                                 },
                                                                                 {
-                                                                                    "content": "Wealth doesn’t matter much for the environment—it’s really the overall population that is most important.",
+                                                                                    "content": "Wealth doesn&#x2019;t matter much for the environment&#x2014;it&#x2019;s really the overall population that is most important.",
                                                                                     "answerKey": "answer4"
                                                                                 },
 
