--- a/Neff/MC/68830_RE_C05.html
+++ b/Neff/MC/68830_RE_C05.html
@@ -41,15 +41,15 @@
                                                                     "order": "randomized",
                                                                     "presenterType": "RadioGroup",
                                                                     "presenterConfig": {"numberFormat": ""},
-                                                                    "question": "5) You know that the U.S. electricity grid is fragmented—in fact, it is actually separated into three major grids with few connections between sections.  However, you are wondering why these three grids don’t just become mini-grid systems that remain centralized but run completely on the renewable resources that are available in each respective section.  What major issue still stands in the way of this plan to implement renewable power on a large, centralized scale in the future?",
+                                                                    "question": "5) You know that the U.S. electricity grid is fragmented&#x2014;in fact, it is actually separated into three major grids with few connections between sections.  However, you are wondering why these three grids don&#x2019;t just become mini-grid systems that remain centralized but run completely on the renewable resources that are available in each respective section.  What major issue still stands in the way of this plan to implement renewable power on a large, centralized scale in the future?",
                                                                     "choices":
                                                                             [
                                                                                 {
-                                                                                    "content": "Energy from many renewable sources, such as solar and wind, are only available at certain times and are difficult to store for use during “off” times, regardless of the size or interconnectivity of the grid.",
+                                                                                    "content": "Energy from many renewable sources, such as solar and wind, are only available at certain times and are difficult to store for use during &#x201c;off&#x201d; times, regardless of the size or interconnectivity of the grid.",
                                                                                     "answerKey": "answer1"
                                                                                 },
                                                                                 {
-                                                                                    "content": "The U.S. government is not in favor of taking this mini-grid approach because they don’t want one area to have a major competitive advantage over another area, so they plan to continue work and research on a more connected structure.",
+                                                                                    "content": "The U.S. government is not in favor of taking this mini-grid approach because they don&#x2019;t want one area to have a major competitive advantage over another area, so they plan to continue work and research on a more connected structure.",
                                                                                     "answerKey": "answer2"
                                                                                 },
                                                                                 {
@@ -94,7 +94,7 @@
                                                                                 "answer4":
                                                                                         {
                                                                                             "score": 0,
-                                                                                            "response": "Even if a certain resource such as solar was widely available in one of these mini-grids, does solar energy work at all times, and is it easy to store it for “off” times?"
+                                                                                            "response": "Even if a certain resource such as solar was widely available in one of these mini-grids, does solar energy work at all times, and is it easy to store it for &#x201c;off&#x201d; times?"
                                                                                         }
                                                                             }
                                                                 }
