updated dropdowns for 0.91

--- a/Neff/Other/AgeSimBirth.html
+++ b/Neff/Other/AgeSimBirth.html
@@ -61,12 +61,12 @@
 											"id": "ageBirth-selgrp",
                                             "choices": 
                                                 [
-                                                    { "content": "A<sub>c</sub> = 15" },
-                                                    { "content": "A<sub>c</sub> = 20" },
-                                                    { "content": "A<sub>c</sub> = 25" },
-                                                    { "content": "A<sub>c</sub> = 30" },
-                                                    { "content": "A<sub>c</sub> = 35" },
-                                                    { "content": "A<sub>c</sub> = 40" }
+                                                    { "content": "15" },
+                                                    { "content": "20" },
+                                                    { "content": "25" },
+                                                    { "content": "30" },
+                                                    { "content": "35" },
+                                                    { "content": "40" }
                                         		]
 										}
 								}
