--- a/Neff/Other/AgeSimFertile.html
+++ b/Neff/Other/AgeSimFertile.html
@@ -60,12 +60,12 @@
 											"id": "fertile-selgrp",
                                             "choices": 
                                                 [
-                                                    { "content": "T<sub>f</sub> = 0 children/female" },
-                                                    { "content": "T<sub>f</sub> = 1 child/female" },
-                                                    { "content": "T<sub>f</sub> = 2 children/female" },
-                                                    { "content": "T<sub>f</sub> = 3 children/female" },
-                                                    { "content": "T<sub>f</sub> = 4 children/female" },
-                                                    { "content": "T<sub>f</sub> = 5 children/female" }
+                                                    { "content": "0" },
+                                                    { "content": "1" },
+                                                    { "content": "2" },
+                                                    { "content": "3" },
+                                                    { "content": "4" },
+                                                    { "content": "5" }
                                         		]
 										}
 								}
