--- a/Neff/Other/AgeSim.html
+++ b/Neff/Other/AgeSim.html
@@ -60,12 +60,12 @@
 											"id": "fertile-selgrp",
                                             "choices": 
                                                 [
-                                                    { "content": "T<sub>f</sub> = 0 children/female" },
-                                                    { "content": "T<sub>f</sub> = 1 child/female" },
-                                                    { "content": "T<sub>f</sub> = 2 children/female" },
-                                                    { "content": "T<sub>f</sub> = 3 children/female" },
-                                                    { "content": "T<sub>f</sub> = 4 children/female" },
-                                                    { "content": "T<sub>f</sub> = 5 children/female" }
+                                                    { "content": "0" },
+                                                    { "content": "1" },
+                                                    { "content": "2" },
+                                                    { "content": "3" },
+                                                    { "content": "4" },
+                                                    { "content": "5" }
                                         		]
 										}
 								}
@@ -141,12 +141,12 @@
 											"id": "ageBirth-selgrp",
                                             "choices": 
                                                 [
-                                                    { "content": "A<sub>c</sub> = 15" },
-                                                    { "content": "A<sub>c</sub> = 20" },
-                                                    { "content": "A<sub>c</sub> = 25" },
-                                                    { "content": "A<sub>c</sub> = 30" },
-                                                    { "content": "A<sub>c</sub> = 35" },
-                                                    { "content": "A<sub>c</sub> = 40" }
+                                                    { "content": "15" },
+                                                    { "content": "20" },
+                                                    { "content": "25" },
+                                                    { "content": "30" },
+                                                    { "content": "35" },
+                                                    { "content": "40" }
                                         		]
 										}
 								}
@@ -182,7 +182,7 @@
 											"stepVal": 1,
 											"width": "60%",
 											"label": "Years",
-											"format": "0.0f",
+											"format": "0.0f"
 										}
 								}
 							],
@@ -288,7 +288,7 @@
 													"orientation": "right",
                                                     "ticks": 10,
 													"label": ""
-												},
+												}
 										}
 								},
 								{
@@ -311,7 +311,7 @@
 													"orientation": "left",
                                                     "ticks": 10,
 													"label": "Age"
-												},
+												}
 										}
 								},
 								{
@@ -319,7 +319,7 @@
 									"bricType": "SvgContainer",
 									"config":
 										{
-											"maxSize": {"height": 450, "width": 577},
+											"maxSize": {"height": 450, "width": 577}
 										},
 									"configFixup":
                                         [
@@ -439,22 +439,12 @@
 									"args":
 										[
 											{ "type": "ref", "domain": "brix", "refId": "graph2" },
-											{ "type": "constant", "value": {"topPercentOffset": 0, "leftPercentOffset": .45, "heightPercent": 1, "widthPercent": 0.55} }
+											{ "type": "constant", "value": {"topPercentOffset": 0, "leftPercentOffset": 0.45, "heightPercent": 1, "widthPercent": 0.55} }
 										]
 								}
 							]
-					},
-				],
-            "data":
-                {
-                    
-					"waveform":
-						[
-							[{"x": 0, "y": 0},
-							{"x": 1, "y": 0}]
-						],
-                    
-                }
+					}
+				]
 		};
 
 	pearson.utils.logToConsole(true, 'FINER');
@@ -464,186 +454,7 @@
 	a.bricLayer = new pearson.brix.BricLayer(null, a.eventManager);
 
 	a.building = a.bricLayer.build(a.config);
-/*
 
-	var SVGContainer = pearson.brix.SVGContainer;
-var LineGraph = pearson.brix.LineGraph;
-var BarChart = pearson.brix.BarChart;
-var Slider = pearson.brix.Slider;
-var Readout = pearson.brix.Readout;
-var Legend = pearson.brix.Legend;
-var EventManager = pearson.utils.EventManager;
-var SelectGroup = pearson.brix.SelectGroup;
-var eventManager = new EventManager();
-	
-var years = 100;
-var maxAge = 100;
-var initialPop = 10000;
-
-	
-// Select mortality type
-var profiles = new SelectGroup(
-		{
-			choices: [
-			{
-			content: "Highly developed nations",
-			},
-			{
-       		content: "Developing nations",
-			},
-			{
-			content: "Least developed nations",
-			},
-			]
-			
-		}, eventManager);
-		
-profiles.draw(d3.select("#dropdown1"));
-
-// slider for looking at different years in the population evolution
-var fertileDrop = new SelectGroup(
-		{
-			choices: [
-			{
-			content: "T<sub>f</sub> = 0 children/female",
-			},
-			{
-       		content: "T<sub>f</sub> = 1 child/female",
-			},
-			{
-			content: "T<sub>f</sub> = 2 children/female",
-			},
-			{
-			content: "T<sub>f</sub> = 3 children/female",
-			},
-			{
-       		content: "T<sub>f</sub> = 4 child/female",
-			},
-			{
-			content: "T<sub>f</sub> = 5 children/female",
-			}
-			]
-		}, eventManager);
-		
-fertileDrop.draw(d3.select("#dropdown0"));
-
-// slider for looking at different age of first childbirth
-var ageFirstBirthDrop =  new SelectGroup(
-		{
-			choices: [
-			{
-			content: "A<sub>c</sub> = 15",
-			},
-			{
-       		content: "A<sub>c</sub> = 20",
-			},
-			{
-			content: "A<sub>c</sub> = 25",
-			},
-			{
-			content: "A<sub>c</sub> = 30",
-			},
-			{
-       		content: "A<sub>c</sub> = 35",
-			},
-			{
-			content: "A<sub>c</sub> = 40",
-			}
-			]
-		}, eventManager);
-		
-ageFirstBirthDrop.draw(d3.select("#slider1"));
-
-// slider for looking at different years in the population evolution
-var yearSlide = new Slider ({
-			startVal: 0,
-			minVal: 0,
-			maxVal: years,
-			stepVal: 1,
-			width: '100%',
-			unit: "years",
-			label: "Years elapsed",
-			format: d3.format('.1f')
-		}, eventManager);
-		
-yearSlide.draw(d3.select("#slider2"));
-
-
-	var cont1 = new SVGContainer({
-			node: d3.select("#graph0"),
-			maxWid: 577,
-			maxHt: 450
-		});
-		
-	var barsWomen = new BarChart({
-			id: "lg0",
-			Data: [[]], 
-			type: "lines",
-			xAxisFormat: { type: "linear",
-						   ticks:  [0, initialPop/40, initialPop/20],
-						   orientation: "bottom",
-						   label: "Female population" },
-			yAxisFormat: { type: "ordinal",
-						   orientation: "left",
-						   label: "Age",
-						   ticks: 10
-						    },
-		},eventManager);	
-			
-	var barsMen = new BarChart ({
-		Data: [[]],
-		xAxisFormat: { 
-						type: "linear", 
-					   	mode: "reverse",
-					   	ticks: [0, initialPop/40, initialPop/20],
-					   	orientation: "bottom",
-					   	label: "Male population"},
-		yAxisFormat: { type: "ordinal",
-					   orientation: "right",
-					   ticks: 10
-					   },
-	});
-
-	var endPop = new Readout({
-			node: d3.select("#readout0"),
-			//startVal: 100000,
-			readOnly: true,
-			size: 5,
-			label: ""
-		});
-	
-	var yearPop = new Readout({
-			node: d3.select("#readout1"),
-			//startVal: 100000,
-			readOnly: true,
-			size: 5,
-			unit: "years: ",
-			label: "Total population after "
-		});
-	
-	var popConfig =
-	{
-		yearSlider: yearSlide,
-		yearTopic: yearSlide.changedValueEventId,
-		//popDistributionTopic: popDistribution.selectedEventId,
-		mortTopic: profiles.selectedEventId,
-		fertilityTopic: fertileDrop.selectedEventId,
-		ageFirstBirthTopic: ageFirstBirthDrop.selectedEventId,
-		targetBricLeft: barsWomen,
-		targetBricRight: barsMen,
-		targetPopReadout: endPop,
-		targetYearReadout: yearPop
-	};
-	fertileDrop.selectChoice(2);
-
-	var popMortar = new pearson.brix.mortar.AgeStructure(popConfig, eventManager);
-
-	cont1.append(barsWomen, {topPercentOffset: 0, leftPercentOffset: .45, heightPercent: 1, widthPercent: 0.55});
-	cont1.append(barsMen, {topPercentOffset: 0, leftPercentOffset: 0.05, heightPercent: 1, widthPercent: 0.45});
-	
-
-	
- */
 </script>
 </body>
 </html>
