--- a/Neff/MC/68830_HP_M07_04.html
+++ b/Neff/MC/68830_HP_M07_04.html
@@ -41,24 +41,28 @@
 											"order": "randomized",
 											"presenterType": "RadioGroup",
 											"presenterConfig": { "numberFormat": "" },
-											"question": "Question 4 of the series. This is a placeholder until the question arrives.",
+											"question": "Enter conditions that you would expect for the United States. You can find these conditions in the chapter. With these assumptions, how would you expect the U.S. population to change (based on the results of the simulation)?",
 											"choices":
 												[
 													{
-														"content": "Answer 1",
+														"content": "The population would increase dramatically (more than two times the size).",
 														"answerKey": "answer1"
 													},
 													{
-														"content": "Answer 2",
+														"content": "The population would double.",
 														"answerKey": "answer2"
 													},
 													{
-														"content": "Answer 3",
+														"content": "The population would stay the same.",
 														"answerKey": "answer3"
 													},
 													{
-														"content": "Answer 4",
+														"content": "The population would decline slightly.",
 														"answerKey": "answer4"
+													},
+													{
+														"content": "The population would decline dramatically.",
+														"answerKey": "answer5"
 													}
 												]
 										},
@@ -77,23 +81,28 @@
 												{
 													"answer1":
 														{
-															"score": 1,
-															"response": ""
+															"score": 0,
+															"response": "Check your assumptions about the U.S. and try again."
 														},
 													"answer2":
 														{
 															"score": 0,
-															"response": ""
+															"response": "Check your assumptions about the U.S. and try again."
 														},
 													"answer3":
 														{
 															"score": 0,
-															"response": ""
+															"response": "The TFR of the U.S. is 2.1 so use a TFR of 2.0 and try again."
 														},
 													"answer4":
 														{
+															"score": 1,
+															"response": "Correct"
+														},
+													"answer5":
+														{
 															"score": 0,
-															"response": ""
+															"response": "Check your assumptions about the U.S. and try again."
 														}
 												}
 										}
