--- a/Neff/MC/68830_HP_M07_05.html
+++ b/Neff/MC/68830_HP_M07_05.html
@@ -41,23 +41,23 @@
 											"order": "randomized",
 											"presenterType": "RadioGroup",
 											"presenterConfig": { "numberFormat": "" },
-											"question": "Question 5 of the series. This is a placeholder until the question arrives.",
+											"question": "In the prior question, the simulation suggests that the U.S. population should be declining, but in fact the U.S. population is still increasing. What could explain this?",
 											"choices":
 												[
 													{
-														"content": "Answer 1",
+														"content": "The age of first childbirth is declining quickly in the United States.",
 														"answerKey": "answer1"
 													},
 													{
-														"content": "Answer 2",
+														"content": "The total fertility rate in the United States is rising quickly",
 														"answerKey": "answer2"
 													},
 													{
-														"content": "Answer 3",
+														"content": "Immigration into the United States keeps the population growing.",
 														"answerKey": "answer3"
 													},
 													{
-														"content": "Answer 4",
+														"content": "The baby boom generation is still having children, and so the country is still growing.",
 														"answerKey": "answer4"
 													}
 												]
@@ -77,23 +77,23 @@
 												{
 													"answer1":
 														{
-															"score": 1,
-															"response": ""
+															"score": 0,
+															"response": "Does this fit with what you know about changes in the U.S.?"
 														},
 													"answer2":
 														{
 															"score": 0,
-															"response": ""
+															"response": "Does this pattern fit with what you know about changes in the U.S.?"
 														},
 													"answer3":
 														{
-															"score": 0,
-															"response": ""
+															"score": 1,
+															"response": "Correct"
 														},
 													"answer4":
 														{
 															"score": 0,
-															"response": ""
+															"response": "The baby boomers are now starting to retire and are past reproductive age."
 														}
 												}
 										}
