--- a/Neff/MC/68830_HP_M07_02.html
+++ b/Neff/MC/68830_HP_M07_02.html
@@ -41,23 +41,23 @@
 											"order": "randomized",
 											"presenterType": "RadioGroup",
 											"presenterConfig": { "numberFormat": "" },
-											"question": "Question 2 of the series. This is a placeholder until the question arrives.",
+											"question": "How many children will the average woman have to have if the initial population is going to quadruple (that is, be about 40,000) in 100 years?",
 											"choices":
 												[
 													{
-														"content": "Answer 1",
+														"content": "Total fertility rate = 1",
 														"answerKey": "answer1"
 													},
 													{
-														"content": "Answer 2",
+														"content": "Total fertility rate = 2",
 														"answerKey": "answer2"
 													},
 													{
-														"content": "Answer 3",
+														"content": "Total fertility rate = 3",
 														"answerKey": "answer3"
 													},
 													{
-														"content": "Answer 4",
+														"content": "Total fertility rate = 4",
 														"answerKey": "answer4"
 													}
 												]
@@ -77,7 +77,7 @@
 												{
 													"answer1":
 														{
-															"score": 1,
+															"score": 0,
 															"response": ""
 														},
 													"answer2":
@@ -92,7 +92,7 @@
 														},
 													"answer4":
 														{
-															"score": 0,
+															"score": 1,
 															"response": ""
 														}
 												}
