Cleanup on Manza Other brix

--- a/Manza/Other/IN_11.1.5.html
+++ b/Manza/Other/IN_11.1.5.html
@@ -28,7 +28,7 @@
 
     a.config =
 		{
-			"description": "Image carousel Distinguishing Racial and Ethnic Labels",
+			"description": "Image carousel Distinguishing Native and Migrant Ethnic Groups",
 			"imgBaseUrl": "",
 			"containerConfig":
 				[
