--- a/Manza/Other/IN_11.2.2.html
+++ b/Manza/Other/IN_11.2.2.html
@@ -29,7 +29,7 @@
 
     a.config =
         {
-			"description": "Photo carousel includes 2 images depicting families where parents are dressed in more traditional ethnic clothes, and children look like American kids/teens.",
+			"description": "Photo carousel on cultural assimilation",
             "imgBaseUrl": "",
             "containerConfig":
                 [
