--- a/Manza/Other/IN_11.3.3a.html
+++ b/Manza/Other/IN_11.3.3a.html
@@ -23,7 +23,7 @@
 	// The activity config that defines the brix and mortar for this page
 	a.config =
 		{
-			"description": "Swappable Graph Carousel comparing racial attitudes on marriage, schools, and residential choice",
+			"description": "Graph Carousel on Post-Civil Rights Era Racial Attitudes on Marriage, Schools, & Residential Choice",
 			"containerConfig":
 				[
 					{
