--- a/Manza/Other/IN_11.5.2.html
+++ b/Manza/Other/IN_11.5.2.html
@@ -28,7 +28,7 @@
 
     a.config =
 		{
-			"description": "Image carousel showing people of different nationalities",
+			"description": "Modern Celebrities with Multiracial Ancestry",
 			"imgBaseUrl": "",
 			"containerConfig":
 				[
