--- a/Manza/Other/IN_11.2.4a.html
+++ b/Manza/Other/IN_11.2.4a.html
@@ -28,7 +28,7 @@
 
     a.config =
 		{
-			"description": "Image carousel showing people of different nationalities",
+			"description": "Image carousel on Observing Surface Biological Traits",
 			"imgBaseUrl": "",
 			"containerConfig":
 				[
