--- a/Manza/Other/IN_11.4.9.html
+++ b/Manza/Other/IN_11.4.9.html
@@ -23,7 +23,7 @@
 	// The activity config that defines the brix and mortar for this page
 	a.config =
 		{
-			"description": "Swappable graph carousel demonstrating various health-related indicators",
+			"description": "Various Health-Related Indicators",
 			"containerConfig":
 				[
 					{
