--- a/Manza/Other/IN_11.5.5a.html
+++ b/Manza/Other/IN_11.5.5a.html
@@ -28,7 +28,7 @@
 
     a.config =
         {
-			"description": "Image carousel showing stages of sensory coding.",
+			"description": "Becoming a Majority-Minority Nation [Map]",
             //"imgBaseUrl": "http://localhost:8088/images/",
             "imgBaseUrl": "",
             "containerConfig":
